--- a/views/signed-up.mustache
+++ b/views/signed-up.mustache
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Signed Up</title>
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <h1>Thank you for signing up!</h1>
